--- a/styles.css
+++ b/styles.css
@@ -2,11 +2,16 @@ body {
     font-family: sans-serif;
 }
 
+.deck-container {
+  width: 90%;
+}
+
 q, cite {
     float: left;
     clear: both;
 }
-q {
+.slide q {
+  font-weight: bold;
 }
 .deck-container q:before,
 .deck-container q:after {
@@ -18,6 +23,26 @@ q {
 }
 cite:before {
     content: " - ";
+}
+
+#slide-25 div {
+  min-height: 240px;
+  min-width: 300px;
+  margin: 0 16px 16px 0;
+  float: left;
+}
+
+#slide-29 {
+clear: left;
+}
+
+.slide p {
+    line-height: 22px;
+}
+
+.slide code {
+    border: 1px solid #cacaca;
+    margin: 2px;
 }
 
 .code_sample {
@@ -35,7 +60,7 @@ cite:before {
 }
 .code_sample textarea,
 .code_sample pre {
-    width: 42%;
+    width: 45%;
     height: 120px;
     padding: 8px;
     margin: 8px;
